--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,9 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
-              "src/assets/fontface.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/assets/fontface.css"
             ],
             "scripts": []
           },
