--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@syncfusion/ej2-angular-dropdowns": "^18.1.42",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "g": "^2.0.1",
