--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.7",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
     "@angular/localize": "^9.1.0",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
@@ -27,6 +29,9 @@
     "g": "^2.0.1",
     "ng-sidebar": "^9.2.0",
     "ng2-charts": "^2.3.0",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-material-timepicker": "^5.5.1",
+    "ngx-scrollbar": "^7.2.1-beta.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
