--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ng-select/ng-select": "^4.0.0",
     "@syncfusion/ej2-angular-dropdowns": "^18.1.42",
+    "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "g": "^2.0.1",
