--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
-              "src/assets/fontface.css"
+              "src/assets/fontface.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
