--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.7",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
@@ -34,6 +34,9 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-material-timepicker": "^5.5.1",
     "ngx-scrollbar": "^7.2.1-beta.0",
+    "ngx-spinner": "^9.0.2",
+    "ngx-toastr": "^12.0.1",
+    "ngx-ui-loader": "^9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
