--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@ng-select/ng-select": "^4.0.0",
     "@syncfusion/ej2-angular-dropdowns": "^18.1.42",
+    "angular-datatables": "^9.0.1",
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "g": "^2.0.1",
+    "jquery": "^3.5.0",
     "ng-sidebar": "^9.2.0",
     "ng2-charts": "^2.3.0",
     "ng2-file-upload": "^1.4.0",
@@ -46,8 +50,10 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.34",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
